load-tests/setup/small_payload/kit-optimize-2-67/camunda-platform-helm/charts/camunda-platform-8.6/test/unit/zeebe-gateway/golden/ingress-rest-all-enabled.golden.yaml
---
# Source: camunda-platform/templates/zeebe-gateway/ingress-rest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camunda-platform-test-zeebe-gateway-rest
  labels:
    app: camunda-platform
    app.kubernetes.io/name: camunda-platform
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/component: zeebe-gateway
    app.kubernetes.io/version: "8.6.34"
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-platform-test-zeebe-gateway
                port:
                  number: 8080
  tls:
    - hosts:
        - local
      secretName: my-secret
